--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.9.2",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6",
+    "eslint": "^8.22.0",
+    "eslint-plugin-react": "^7.30.1"
   },
   "private": true
 }
