--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.9.2",
+    "firebase": "8.2.3",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-safe-area-context": "4.3.1",
